[package]
name = "harvest-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "harvest"
path = "src/lib.rs"

[[bin]]
name = "harvest"
path = "src/bin.rs"


[dependencies]
config = "0.13.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
serde = "1.0.137"
serde_derive = "1.0.137"

